Mon Jan  5 19:30:38 PST 1998 Manish Singh <yosh@gimp.org>

	* app/by_color_select.c: fix for indexed images

	* plug-ins/script-fu/scripts/i26-gunya2.scm: proper registration

	* plug-ins/xpm.c: fix for transparent images

	* Updated to libtool 1.0h

	* libgimp/Makefile.am: removed spurious -rpath

Sun Jan  4 17:43:32 PST 1998 Manish Singh <yosh@gimp.org>

	* app/by_color_select.c: Prevent divide-by-zero error when
	fuzzy threshold in select by color is 0

	* app/tile_swap.c: Minor bugfix for tile saves

	* app/text_tool.c: better handling when there are no fonts

	* Updated PNG plugin from registry

	* Added the FlareFX plugin

Sun Jan  4 14:24:05 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* plug-ins/despeckle/despeckle.c: realloc buffers when the radius
 	of effect changes; save all values (not just radius) in plugin
 	data store; adjusted parameter handling to match PDB registration.
	The algorithm still generates artifacts in the top rows of the
	image.

Sat Jan  3 16:48:02 PST 1998 Manish Singh <yosh@gimp.org>

	* app/colormaps.c: check for NULL pointer access when not enough
	colormaps for standard colormaps (gimp-joke-971219-0)

	* app/fileops.c: fix for saving files in the wrong place

	* app/fuzzy_select.c: now less aggressive (doesn't grab the whole
	image with diagonal 1-pixel wide line) Too conservative now?

	* app/text_tool.c: negative border-value disables autocropping
	of text

	* libgimp/gimplayer.c: gimp_layer_copy pdb called with correct args

	* docs/Wilber.xcf.gz: added logo to docs dir :)

	* Added DigitalSignature, FractalExplorer (not made by default),
	facesaver (not made by default), and Stegano plugins

	* Updated Encrypt_Decrypt, changing the dir name (no more
	Encript_Decript)

	* Updated plugins with their new registry versions

Thu Dec 25 23:04:00 PST 1997 Manish Singh <yosh@gimp.org>

	* Updates from the plugin registry: Compose, Film, FITS, ps,
	refract, sunras, twist
	