@@ -69,9 +69,9 @@ AC_DEFUN(AC_GIMP_CHECK,
 
 	dnl Dont cache this as it depends on CFLAGS, LDFLAGS, etc
 	AC_MSG_CHECKING([for glib and gtk >= 0.99.1])
-        AC_TRY_COMPILE(
+        AC_TRY_LINK(
 [#include <gtk/gtk.h>],
-[gtk_pixmap_unref ();],
+[GtkPixmap *pixmap; gdk_pixmap_unref (pixmap); gtk_button_new();],
 gtk_found=yes,
 gtk_found=no)
 	AC_MSG_RESULT($gtk_found)
